--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,11 +1,10 @@
 :root {
-  --transform-bg-border-color: grey;
+  --transform-bg-border-color: rgb(196, 196, 196);
   --transform-dial: 25px;
   --transform-dial-bg-color: grey;
   --transform-dial-border-color: white;
   --transform-dial-hover-bg-color: #00aced;
   --transform-dial-bg-active-color: #0192c7;
-  --control-panel-border-color: white;
   --control-panel-bg-color: white;
   --canvas-container-bg-color: #e5e5e5;
 }
