--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -1,3 +1,7 @@
-.mb-20 {
-  margin-bottom: 20px !important;
+.mb-10 {
+  margin-bottom: 10px !important;
+}
+
+.mb-40 {
+  margin-bottom: 40px !important;
 }
